fix z-index

--- a/src/app/contacts/contact-info/contact-info.component.scss
+++ b/src/app/contacts/contact-info/contact-info.component.scss
@@ -69,7 +69,7 @@ section {
 }
 .map{
 	width: 705px;
-	height: 400px;
-	border: 1px solid black;
+	height: 412px;
+	z-index: 0;
 }
 
