--- a/src/app/sign-up/sign-up.component.scss
+++ b/src/app/sign-up/sign-up.component.scss
@@ -10,6 +10,7 @@
 	justify-content: center;
 	background-color: #1e212cc2; 
 	overflow-y: auto;
+	z-index: 1;
 }
 
 .container {
